fixed layout issue text StoriesHome component

--- a/src/app/components/stories-home/stories-home.component.scss
+++ b/src/app/components/stories-home/stories-home.component.scss
@@ -18,7 +18,7 @@ sans-serif;
                     }
                 }
                 @media screen and (max-width: 600px) {
-                    width: 125% !important;
+                    width: 130% !important;
                     &:hover {
                         scale: 1 !important;
                     }
@@ -40,7 +40,7 @@ sans-serif;
                 margin-top: -30vw;
                 margin-left: 20px;
             }
-            margin-top: 400px;
+            margin-top: 450px;
             margin-left: 40px;
             width: 270px;
             color: $pureWhite;
